--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 beautifulsoup4 = "^4.12.3"
+customtkinter = "^5.2.2"
 
 
 [build-system]
